tests/errors/comb-static-comp.expect
---CODE---
1
---STDERR---
Error: Failed to parse `tests/errors/comb-static-comp.futil`:  --> 3:1
  |
3 | comb static<1> component custom_lt(left: 4, right: 4) -> (out: 1) {
  | ^------------^
  |
  = Cannot have both comb and static annotations
